PE_optimization/cluster_distance_computation/distance_computation_PE_optimized_version1/1
mkdir -p ./xclbin
/opt/Xilinx/Vitis/2019.2/bin/v++ -t hw --config design.cfg --save-temps --report estimate --temp_dir ./_x.hw/vadd -c -k vadd -I'src' -o'xclbin/vadd.hw.xo' 'src/vadd.cpp'  #--from_step vpl.impl.phys_opt_design
Option Map File Used: '/opt/Xilinx/Vitis/2019.2/data/vitis/vpp/optMap.xml'

****** v++ v2019.2 (64-bit)
  **** SW Build 2708876 on Wed Nov  6 21:39:14 MST 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

INFO: [v++ 60-1306] Additional information associated with this v++ compile can be found at:
	Reports: /mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/_x.hw/vadd/reports/vadd.hw
	Log files: /mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/_x.hw/vadd/logs/vadd.hw
WARNING: [v++ 60-1216] --report/-r option has been deprecated. Please use --report_level/-R estimate to generate an estimate report file for software emulation
Running Dispatch Server on port:46137
INFO: [v++ 60-1548] Creating build summary session with primary output /mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/xclbin/vadd.hw.xo.compile_summary, at Fri Apr  2 10:13:28 2021
INFO: [v++ 60-1316] Initiating connection to rulecheck server, at Fri Apr  2 10:13:28 2021
Running Rule Check Server on port:38019
INFO: [v++ 60-1315] Creating rulecheck session with output '/mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/_x.hw/vadd/reports/vadd.hw/v++_compile_vadd.hw_guidance.html', at Fri Apr  2 10:13:29 2021
INFO: [v++ 60-895]   Target platform: /opt/xilinx/platforms/xilinx_u280_xdma_201920_3/xilinx_u280_xdma_201920_3.xpfm
INFO: [v++ 60-1578]   This platform contains Xilinx Shell Archive '/opt/xilinx/platforms/xilinx_u280_xdma_201920_3/hw/xilinx_u280_xdma_201920_3.xsa'
INFO: [v++ 60-585] Compiling for hardware target
INFO: [v++ 60-423]   Target device: xilinx_u280_xdma_201920_3
INFO: [v++ 60-242] Creating kernel: 'vadd'
INFO: [v++ 60-1616] Creating a HLS clock using kernel_frequency option: 140 MHz

===>The following messages were generated while  performing high-level synthesis for kernel: vadd Log file: /mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/_x.hw/vadd/vadd.hw/vadd/vivado_hls.log :
INFO: [v++ 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
ERROR: [v++ 200-70] Compilation errors found: In file included from /mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/src/vadd.cpp:1:
/mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/src/vadd.cpp:142:24: error: use of undeclared identifier 'table_DDR0'; did you mean 'table_HBM0'?
 s_query_vectors.write(table_DDR0[query_id * 128 + d]);
                       ^~~~~~~~~~
                       table_HBM0
/mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/src/vadd.cpp:131:18: note: 'table_HBM0' declared here
    const float* table_HBM0,
                 ^
/mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/src/vadd.cpp:152:34: error: use of undeclared identifier 'table_DDR1'; did you mean 'table_HBM1'?
        s_centroid_vectors.write(table_DDR1[i]);
                                 ^~~~~~~~~~
                                 table_HBM1
/mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/src/vadd.cpp:148:18: note: 'table_HBM1' declared here
    const float* table_HBM1,
                 ^
2 errors generated.
ERROR: [v++ 60-300] Failed to build kernel(ip) vadd, see log for details: /mnt/scratch/wenqi/FPGA-ANNS/PE_optimization/cluster_distance_computation/distance_computation_PE_add_tree/_x.hw/vadd/vadd.hw/vadd/vivado_hls.log
ERROR: [v++ 60-599] Kernel compilation failed to complete
ERROR: [v++ 60-592] Failed to finish compilation
Makefile:90: recipe for target 'xclbin/vadd.hw.xo' failed
make: *** [xclbin/vadd.hw.xo] Error 1
